@@ -64,7 +64,7 @@ public class AuthenticationManagementResource extends RoleMappingResource {
 
         return realm.getAuthenticationFlowsStream()
                 .filter(flow -> flow.isTopLevel() && !Objects.equals(flow.getAlias(), DefaultAuthenticationFlows.SAML_ECP_FLOW))
-                .map(flow -> AuthenticationMapper.convertToModel(flow, realm))
+                .map(flow -> AuthenticationMapper.convertToModel(super.session, flow, realm))
                 .collect(Collectors.toList());
 
     }
@@ -88,11 +88,11 @@ public class AuthenticationManagementResource extends RoleMappingResource {
                     )
             )}
     )
-    public final List<String> listUsed(@PathParam("id") String id, @PathParam("type") String type, @QueryParam("first") @DefaultValue("0") long first,
-            @QueryParam("max") @DefaultValue("10") long max, @QueryParam("search") @DefaultValue("") String search) {
+    public final List<String> listUsed(@PathParam("id") String id, @PathParam("type") String type, @QueryParam("first") @DefaultValue("0") int first,
+            @QueryParam("max") @DefaultValue("10") int max, @QueryParam("search") @DefaultValue("") String search) {
         auth.realm().requireViewAuthenticationFlows();
 
-        final AuthenticationFlowModel flow = realm.getAuthenticationFlowsStream().filter(f -> id.equals(f.getId())).collect(Collectors.toList()).get(0);
+        final AuthenticationFlowModel flow = realm.getAuthenticationFlowsStream().filter(f -> id.equals(f.getId())).toList().get(0);
 
         if ("clients".equals(type)) {
             final Stream<ClientModel> clients = realm.getClientsStream();
@@ -105,11 +105,7 @@ public class AuthenticationManagementResource extends RoleMappingResource {
         }
 
         if ("idp".equals(type)) {
-            final Stream<IdentityProviderModel> identityProviders = realm.getIdentityProvidersStream();
-            return identityProviders.filter(idp -> flow.getId().equals(idp.getFirstBrokerLoginFlowId())
-                            || flow.getId().equals(idp.getPostBrokerLoginFlowId()))
-                    .map(IdentityProviderModel::getAlias).filter(f -> f.contains(search))
-                    .skip("".equals(search) ? first : 0).limit(max).collect(Collectors.toList());
+            return session.identityProviders().getByFlow(flow.getId(), search, first, max).toList();
         }
 
         throw new IllegalArgumentException("Invalid type");
